Second attemptat fixing select spacing issues.

--- a/src/Components/Pages/Reservation/BookingForm/BookingForm.css
+++ b/src/Components/Pages/Reservation/BookingForm/BookingForm.css
@@ -122,33 +122,28 @@
 }
 
 .drop-down {
-  display: flex;
-  align-items: center;
   margin: 1rem 0rem; /*top and bottom | left and right*/
-  padding: 0.5rem 1rem 0.5rem 0; /* top | right | bottom | left */
+  padding: 0.5rem 1rem 0.5rem 0.5rem; /* top | right | bottom | left */
 
   appearance: none; /*This will remove the standard arrow*/
   background-image: url(../../../../Images/chevron-down-solid-green.svg);
-  /* background-image: url(./Images/chevron-down-solid-green.svg); */
   background-repeat: no-repeat;
   background-size: 17px;
   background-color: #edefee;
   background-position: 90%;
 
-  min-width: 160px;
+  min-width: 200px;
   max-width: 270px;
 
   color: #495e57;
   font-size: 18px;
   font-weight: bold;
   line-height: 24px;
-  /* text-align: center; */
   border: none;
   border-radius: 20px;
   box-shadow: 4px 4px 4px #00000026;
 
   grid-column-start: 2;
-  grid-column-end: 4;
 }
 
 @media (max-width: 600px) {
@@ -163,7 +158,7 @@ option {
   color: #495e57;
   font-size: 18px;
   font-weight: bold;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .has-value-selected {
